--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "seed": "node seeds/index.js",
-    "dev": "concurrently \"npm:watch-*\"",
+    "dev": "concurrently \"npm:watch-*\" \"webpack --watch \"",
     "start": "node server.js",
     "watch-js": "nodemon -e js,handlebars server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -31,7 +31,13 @@
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
     "concurrently": "^6.1.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0"
   }
 }
